# django-admin-wizard

./: MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  requires.txt  setup.py  tox.ini
.github/workflows/: build.yml  codecov.yml  mypy.yml  pythonpublish.yml
admin_wizard/: admin.py  forms.py  tests.py
src/admin_wizard/: admin.py
src/admin_wizard/locale/ru/LC_MESSAGES/: django.po
src/admin_wizard/templates/admin/: admin_action_wizard.html  admin_update_wizard.html
testproject/: settings.py
testproject/testapp/: admin.py  forms.py  tests.py
tests/testproject/: settings.py
tests/testproject/testapp/: admin.py  forms.py  models.py  tests.py
tests/testproject/testapp/migrations/: 0001_initial.py
