[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-data]
admin_wizard = ["**/*.html"]

[project]
name = "django-admin-wizard"
dynamic = ["version"]
description = "Django Admin dialogs and actions with intermediate forms"
readme = "README.md"
authors = [
    { name = "Sergey Tikhonov", email = "zimbler@gmail.com" },
]

dependencies = [
    "Django>=3.2,<5.3",
]
license = { text = "MIT" }
keywords = [
    "django",
    "admin",
    "wizard",
    "actions",
]
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Framework :: Django :: 3.2',
        'Framework :: Django :: 4.0',
        'Framework :: Django :: 4.1',
        'Framework :: Django :: 4.2',
        'Framework :: Django :: 5.0',
        'Framework :: Django :: 5.1',
        'Framework :: Django :: 5.2',
        'Operating System :: POSIX',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System',
]

[project.urls]
homepage = "https://github.com/just-work/django-admin-wizard"
